src/test/ui/typeck/issue-52284.stderr
error[E0308]: mismatched types
  --> $DIR/issue-52284.rs:5:5
   |
LL | /   if true {
LL | |     Alef()
   | |     ^^^^^^ expected `()`, found struct `Alef`
LL | |   }
   | |___- expected this to be `()`
   |
help: try adding return
   |
LL |     return Alef()
   |     ^^^^^^
help: consider using a semicolon here
   |
LL |   };
   |    ^

error[E0308]: mismatched types
  --> $DIR/issue-52284.rs:8:5
   |
LL | /   if true {
LL | |     Bet()
   | |     ^^^^^ expected `()`, found struct `Bet`
LL | |   }
   | |___- expected this to be `()`
   |
help: try adding a semicolon
   |
LL |     Bet();
   |          ^
help: consider using a semicolon here
   |
LL |   };
   |    ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
